# MACTA-tools

./: .dockerignore  .flake8  .gitignore  Dockerfile  Pipfile  README.md  annotate.py  pyproject.toml  pyrightconfig.json  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/ISSUE_TEMPLATE/: annotation-tool-request.md  bug_report.md  feature_request.md
.github/workflows/: tests.yml
annotation/tools/: celltypist_interface.py  cta_tool_interface.py
scripts/: install_in_conda.sh  install_in_conda_editable.sh  macta_cli.py
src/: main.py
src/macta/: __init__.py  _annotate.py
src/macta/_annotation/: _annotate.py
src/macta/_annotation/tools/: __init__.py  _celltypist_interface.py  _cta_tool_interface.py
src/macta/_annotation/tools/utils/: _cta_tool_interface.py
src/macta/tools/: __init__.py  _celltypist_interface.py  _cta_tool_interface.py  _scanvi.py
src/macta/utils/: __init__.py  _directory_close_mode.py  _is_collection.py  _temporary_folder.py  contexts.py
src/macta/utils/requirements/: __init__.py  _contains_requirement.py  _equality_requirement.py  _is_instance_requirement.py  _not_none_requirement.py  _requirement.py  _requirement_list.py  _strict_requirement.py
src/macta_annotation/: main.py
src/macta_annotation.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/macta_annotation/annotation/: annotate.py
src/macta_annotation/annotation/tools/: __init__.py  _cellassign_interface.py  cellassign_interface.py  celltypist_interface.py  cta_tool_interface.py
src/macta_annotation/annotation/tools/utils/: __init__.py
src/macta_annotation/utils/: __init__.py  is_collection.py
src/macta_annotation/utils/requirements/: __init__.py  _contains_requirement.py  _is_instance_requirement.py  _requirement.py  _requirement_list.py
src/macta_tools/: __init__.py  _annotate.py  _cli.py
src/macta_tools/_cli/: main.py  parser.py
src/macta_tools/tools/: __init__.py  _celltypist_interface.py  _cta_tool_interface.py  _scanvi.py
src/macta_tools/utils/: contexts.py
src/macta_tools/utils/requirements/: __init__.py  _contains_requirement.py  _equality_requirement.py  _is_instance_requirement.py  _not_none_requirement.py  _requirement.py  _requirement_list.py
src/utils/: directory_close_mode.py  temporary_folder.py
tests/tools/: test_celltypist.py  test_scanvi.py
tests/utils/: test_is_collection.py
tests/utils/requirements/: test_contains_requirement.py  test_is_instance_requirement.py  test_requirement.py  test_requirement_list.py  test_some_requirement.py
tools/: cta_tool_interface.py
