[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "macta"
authors = [{ name = "Aleksandr Bekker", email = "alekso.bekker@gmail.com" }]
description = "Annotation tools for the MACTA suite"
keywords = ["cell type annotation", "single cell"]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "GPL3" }
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.9",
]
dependencies = [
    "anndata>=0.8.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "scanpy>=1.9.3",
]
version = "0.4.0"

[project.optional-dependencies]

# Per-tool extras
celltypist = ["celltypist>=1.3.0"]
scanvi = ["scvi-tools", "scarches"]

# Per-version extras
py38 = ["macta[celltypist]"]
py39 = ["macta[celltypist]"]
py310 = ["macta[celltypist]"]
torch38 = ["macta[scanvi]"]

# Testing extras
testing = [
    "flake8",
    "flake8-quotes",
    "isort",
    "mypy",
    "pytest",
    "pytest-cov",
    "tox",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["macta"]
namespaces = false

[tool.setuptools.package-data]
"pkgname" = ["py.typed"]

[tool.pytest.ini_options]
addopts = "--cov=macta"
testpaths = ["tests"]

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true

[tool.isort]
line_length = 120
