[metadata]
name = macta
version = 0.0.4
description = annotation tools for MACTA
author = 'Aleksandr Bekker'
author_email = 'alekso.bekker@gmail.com'
license = GPL3
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages =
    macta
install_requires = 
    anndata>=0.7.5
    celltypist>=0.1.9
    pandas>=1.3.5
    scanpy>=1.9.1
    scvi>=0.6.8
    scvi-tools>=0.16.0
python_requires = >= 3.7
package_dir = 
    =src
zip_safe = no

[options.extras_require]
testing = 
    flake8>=4.0.1
    pytest>=7.1.1
    pytest-cov>=2.12.1
    tox>=3.25.0

[options.package_data]
slapping = py.typed

[flake8]
ignore = E203,E501,W503
max-line-length = 88
per-file-ignores = __init__.py:F401
