[metadata]
name = macta
version = 0.0.4
description = annotation tools for MACTA
author = 'Aleksandr Bekker'
author_email = 'alekso.bekker@gmail.com'
license = GPL3
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7

[options]
package_dir = 
    =src
install_requires = 
    anndata>=0.7.5
    celltypist>=0.1.9
    pandas>=1.3.5
    scanpy>=1.9.1
python_requires = >= 3.7
zip_safe = no

[options.extras_require]
testing = 
    flake8>=4.0.1
    mypy>=0.910
    pytest>=7.1.1
    pytest-cov>=2.12.1
    tox>=3.25.0
    tox-conda>=0.9.2
    typed-ast>=1.4.3

[options.package_data]
slapping = py.typed

[flake8]
ignore = E501,W504
max-line-length = 120
per-file-ignores = __init__.py:F401
inline-quotes = single
multiline-quotes = double
