[metadata]
name = macta
version = 0.0.4
description = annotation tools for MACTA
author = 'Aleksandr Bekker'
author_email = 'alekso.bekker@gmail.com'
license = GPL3
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir = 
    =src
install_requires = 
    anndata>=0.8.0
    pandas>=2.0.0
    pydantic>=1.10.7
    scanpy>=1.9.3
python_requires = >= 3.8
zip_safe = no

[options.extras_require]
py38 =
    celltypist>=1.3.0
py39 =
    celltypist>=1.3.0
py310 =
    celltypist>=1.3.0
testing = 
    flake8>=6.0.0
    flake8-quotes>=3.3.2
    mypy>=1.2.0
    pytest>=7.2.2
    pytest-cov>=4.0.0
    tox>=3.28.0
    typed-ast>=1.5.4

[options.package_data]
macta = py.typed

[flake8]
ignore = E501,W504
max-line-length = 120
per-file-ignores = __init__.py:F401
inline-quotes = single
multiline-quotes = double
